--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@ layout: default
               <path d="M15 13v2"></path>
               <path d="M9 13v2"></path>
             </svg>
+            {% when 'biology' %}
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M2 12h5"></path>
+              <path d="M17 12h5"></path>
+              <path d="M7 12a5 5 0 0 1 5-5 5 5 0 0 1 5 5"></path>
+              <path d="M7 12a5 5 0 0 0 5 5 5 5 0 0 0 5-5"></path>
+              <line x1="12" y1="7" x2="12" y2="17"></line>
+            </svg>
             {% when 'science' %}
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
