--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ layout: default
               <path d="m22 22-5-10-5 10"></path>
               <path d="M14 18h6"></path>
             </svg>
-            {% when 'elite-intelligence' %}
+            {% when 'elite intelligence' %}
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
